--- a/MovieLockerAlphaThree/res/layout/movie_fragment.xml
+++ b/MovieLockerAlphaThree/res/layout/movie_fragment.xml
@@ -55,4 +55,21 @@
 
 	</LinearLayout>
   
+  <TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="@string/movie_barcode_text"
+    style="?android:listSeparatorTextViewStyle" />
+  <EditText android:id="@+id/txtBarcode"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp" />
+  	<Button android:id="@+id/btnScanBarcode" 
+  	    	android:text="@string/barcode_scan_text"
+  	    	android:layout_width="match_parent"
+        	android:layout_height="wrap_content"
+        	android:layout_marginLeft="5dp"
+        	android:layout_marginRight="5dp" />
+  
 </LinearLayout>
