--- a/MovieLockerAlphaThree/res/layout/movie_fragment.xml
+++ b/MovieLockerAlphaThree/res/layout/movie_fragment.xml
@@ -19,9 +19,9 @@
   <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="@string/movie_description_text"
+    android:text="@string/movie_price_text"
     style="?android:listSeparatorTextViewStyle" />
-  <EditText android:id="@+id/txtDescription"
+  <EditText android:id="@+id/txtPrice"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="16dp"
@@ -37,6 +37,30 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp" />
+  
+  <RadioGroup android:layout_width="match_parent"
+      			android:layout_height="wrap_content"
+      			android:orientation="horizontal">"
+      <RadioButton android:id="@+id/rdoOwned"
+          			android:layout_width="wrap_content"
+          			android:layout_height="wrap_content"
+          			android:text="@string/movie_radio_owned_text" />
+      <RadioButton android:id="@+id/rdoWish"
+          			android:layout_width="wrap_content"
+          			android:layout_height="wrap_content"
+          			android:text="@string/movie_radio_wish_text" />"
+  </RadioGroup>
+  
+  <Button android:id="@+id/btnEditMembers"
+	    	android:text="@string/collection_edit_members_text"
+	    	android:layout_width="match_parent"
+	    	android:layout_height="wrap_content"
+	    	android:layout_marginLeft="5dp"
+	    	android:layout_marginRight="5dp"/>
+	
+	<ListView android:id="@+id/lstMembers"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content" />
   
   <LinearLayout android:layout_width="match_parent"
       				android:layout_height="wrap_content"
