--- a/MovieLockerAlphaThree/res/layout/activity_main.xml
+++ b/MovieLockerAlphaThree/res/layout/activity_main.xml
@@ -36,5 +36,12 @@
         	android:layout_height="wrap_content"
         	android:layout_marginLeft="5dp"
         	android:layout_marginRight="5dp"/>
+    
+    <Button android:id="@+id/btnFilter"
+        	android:text="Filter"
+        	android:layout_width="match_parent"
+        	android:layout_height="wrap_content"
+        	android:layout_marginLeft="5dp"
+        	android:layout_marginRight="5dp"/>
 
 </LinearLayout>
