--- a/MovieLockerAlphaThree/res/menu/movie_list_item_context.xml
+++ b/MovieLockerAlphaThree/res/menu/movie_list_item_context.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-<item android:id="@+id/menu_item_delete_contact"
+	<item android:id="@+id/menu_delete"
 	    	android:icon="@android:drawable/ic_menu_delete"
-	    	android:title="@string/menu_delete_movie_text" />
+	    	android:title="@string/menu_delete_text" />
+	<item android:id="@+id/menu_edit"
+	    	android:icon="@android:drawable/ic_menu_edit"
+	    	android:title="@string/menu_edit_text"/>
 </menu>
