--- a/MovieLockerAlphaThree/res/layout/collection_fragment.xml
+++ b/MovieLockerAlphaThree/res/layout/collection_fragment.xml
@@ -23,8 +23,8 @@
 	    	android:layout_marginLeft="5dp"
 	    	android:layout_marginRight="5dp"/>
 	
-	<ListView android:id="@+id/lstMembers"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content" />
+<!-- 	<ListView android:id="@+id/lstMembers" -->
+<!-- 				android:layout_width="match_parent" -->
+<!-- 				android:layout_height="wrap_content" /> -->
 	
 </LinearLayout>
