--- a/MovieLockerAlphaThree/res/layout/genre_fragment.xml
+++ b/MovieLockerAlphaThree/res/layout/genre_fragment.xml
@@ -15,5 +15,12 @@
 		android:layout_height="wrap_content"
 		android:layout_marginLeft="16dp"
 		android:layout_marginRight="16dp" />
+	
+	<Button android:id="@+id/btnEditMovies"
+	    	android:text="@string/genre_edit_movies"
+	    	android:layout_width="match_parent"
+	    	android:layout_height="wrap_content"
+	    	android:layout_marginLeft="5dp"
+	    	android:layout_marginRight="5dp"/>
 
 </LinearLayout>
