--- a/MovieLockerAlphaThree/res/layout/movie_fragment.xml
+++ b/MovieLockerAlphaThree/res/layout/movie_fragment.xml
@@ -1,99 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<LinearLayout
+    android:id="@+id/movie_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:descendantFocusability="beforeDescendants"
+	android:focusableInTouchMode="true" >
+    <LinearLayout android:orientation="vertical"
+		android:layout_width="match_parent"
+		android:layout_height="0dp"
+		android:layout_weight="1">
     
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/movie_name_text"
-    style="?android:listSeparatorTextViewStyle" />
-
-  <EditText android:id="@+id/txtName"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp" />
+	<TextView
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:text="@string/movie_name_text"
+	    style="?android:listSeparatorTextViewStyle" />
+ 	<EditText android:id="@+id/txtName"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_marginLeft="16dp"
+	    android:layout_marginRight="16dp" />
   
-  <TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/movie_price_text"
-    style="?android:listSeparatorTextViewStyle" />
-  <EditText android:id="@+id/txtPrice"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp" />
+ 	<TextView
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:text="@string/movie_price_text"
+	    style="?android:listSeparatorTextViewStyle" />
+ 	<EditText android:id="@+id/txtPrice"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_marginLeft="16dp"
+	    android:layout_marginRight="16dp" />
   
-  <TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/movie_genre_text"
-    style="?android:listSeparatorTextViewStyle" />
-  <Spinner android:id="@+id/spnGenre"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp" />
+ 	<TextView
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:text="@string/movie_genre_text"
+		style="?android:listSeparatorTextViewStyle" />
+	<Spinner android:id="@+id/spnGenre"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_marginLeft="16dp"
+	    android:layout_marginRight="16dp" />
   
-  <RadioGroup android:layout_width="match_parent"
-      			android:layout_height="wrap_content"
-      			android:orientation="horizontal">"
-      <RadioButton android:id="@+id/rdoOwned"
-          			android:layout_width="wrap_content"
-          			android:layout_height="wrap_content"
-          			android:text="@string/movie_radio_owned_text" />
-      <RadioButton android:id="@+id/rdoWish"
-          			android:layout_width="wrap_content"
-          			android:layout_height="wrap_content"
-          			android:text="@string/movie_radio_wish_text" />"
-  </RadioGroup>
+	<RadioGroup 
+	    android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal">
+		
+	    <RadioButton android:id="@+id/rdoOwned"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/movie_radio_owned_text" />
+	    <RadioButton android:id="@+id/rdoWish"
+   			android:layout_width="wrap_content"
+   			android:layout_height="wrap_content"
+   			android:text="@string/movie_radio_wish_text" />
+	    
+	</RadioGroup>
   
-  <Button android:id="@+id/btnEditMembers"
-	    	android:text="@string/collection_edit_members_text"
-	    	android:layout_width="match_parent"
-	    	android:layout_height="wrap_content"
-	    	android:layout_marginLeft="5dp"
-	    	android:layout_marginRight="5dp"/>
+	<Button android:id="@+id/btnEditMembers"
+    	android:text="@string/movie_edit_collections"
+    	android:layout_width="match_parent"
+    	android:layout_height="wrap_content"
+    	android:layout_marginLeft="5dp"
+    	android:layout_marginRight="5dp"/>
 	
-	<ListView android:id="@+id/lstMembers"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content" />
-  
-  <LinearLayout android:layout_width="match_parent"
-      				android:layout_height="wrap_content"
-      				android:layout_marginTop="10dp">
-		<ImageButton android:id="@+id/btnTakePicture"
-		    			android:layout_width="wrap_content"
-		    			android:layout_height="wrap_content"
-		    			android:src="@android:drawable/ic_menu_camera" />
-
-		<ImageView
-		    android:id="@+id/imgMoviePhoto"
-		    android:layout_width="125dp"
-		    android:layout_height="200dp"
-		    android:background="@android:color/darker_gray"
-		    android:scaleType="centerCrop" />
-
 	</LinearLayout>
-  
-  <TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/movie_barcode_text"
-    style="?android:listSeparatorTextViewStyle" />
-  <EditText android:id="@+id/txtBarcode"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp" />
-  	<Button android:id="@+id/btnScanBarcode" 
-  	    	android:text="@string/barcode_scan_text"
-  	    	android:layout_width="match_parent"
-        	android:layout_height="wrap_content"
-        	android:layout_marginLeft="5dp"
-        	android:layout_marginRight="5dp" />
-  
-</LinearLayout>
+ 
+<!--   <LinearLayout android:layout_width="match_parent" -->
+<!-- 	android:layout_height="wrap_content" -->
+<!-- 	android:layout_weight="1" -->
+<!-- 	android:gravity="center"> -->
+	
+<!-- 	<ImageButton android:id="@+id/btnTakePicture" -->
+<!-- 		    			android:layout_width="wrap_content" -->
+<!-- 		    			android:layout_height="wrap_content" -->
+<!-- 		    			android:src="@android:drawable/ic_menu_camera" /> -->
+
+      <ImageView
+          android:id="@+id/imgMoviePhoto"
+          android:layout_width="400dp"
+          android:layout_height="550dp"
+          android:layout_gravity="center_horizontal"
+          android:background="@android:color/darker_gray"
+          android:scaleType="fitCenter"/>"
+
+<!-- 	</LinearLayout> -->
+	</LinearLayout>
+</ScrollView>  
