--- a/MovieLockerAlphaThree/res/menu/filter_menu.xml
+++ b/MovieLockerAlphaThree/res/menu/filter_menu.xml
@@ -1,6 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    
-    <item android:id="@+id/menu_add" 
+       
+	<item android:id="@+id/menu_clear"
+        android:icon="@android:drawable/ic_notification_clear_all"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/menu_clear_filter" />
+        
+	<item android:id="@+id/menu_add" 
         android:icon="@android:drawable/ic_menu_add"
         android:showAsAction="ifRoom|withText"
         android:title="@string/menu_text_new" />
@@ -19,5 +25,5 @@
         android:icon="@drawable/ic_action_search"
         android:showAsAction="ifRoom|withText"
         android:title="@string/menu_filter" />
-
+    
 </menu>
