--- a/MovieLockerAlphaThree/res/menu/id_multiselect_menu.xml
+++ b/MovieLockerAlphaThree/res/menu/id_multiselect_menu.xml
@@ -1,4 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item android:id="@+id/menu_select_all"
+        android:icon="@drawable/ic_action_select_all"
+        android:showAsAction="never|withText"
+        android:title="@string/menu_select_all" />
+    
+    <item android:id="@+id/menu_select_none"
+        android:icon="@android:drawable/ic_notification_clear_all"
+        android:showAsAction="never|withText"
+        android:title="@string/menu_select_none" />
     
     <item android:id="@+id/menu_add" 
         android:icon="@android:drawable/ic_menu_add"
@@ -19,5 +29,4 @@
         android:icon="@drawable/ic_action_search"
         android:showAsAction="ifRoom|withText"
         android:title="@string/menu_filter" />
-
 </menu>
