Cleanup for the final project.

--- a/MovieLocker/res/layout/movie_cover_display.xml
+++ b/MovieLocker/res/layout/movie_cover_display.xml
@@ -18,6 +18,7 @@
     <ImageView android:id="@+id/imgMovieCover"
 		    			android:layout_width="match_parent"
 		    			android:layout_height="wrap_content"
-		    			android:scaleType="centerInside" />
+		    			android:scaleType="centerInside"
+		    			android:contentDescription="@string/movie_cover_content_description" />
     
 </LinearLayout>
